# opacore

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/web/: next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/components/: providers.tsx
apps/web/src/components/dashboard/: network-status.tsx  onboarding-checklist.tsx  placeholder-card.tsx  price-chart.tsx  recent-transactions.tsx  stats-cards.tsx  tax-summary.tsx  transaction-activity.tsx  utxo-distribution.tsx  wallet-overview.tsx
apps/web/src/lib/: api.ts  auth.ts
crates/opacore-server/: Cargo.toml
crates/opacore-server/src/: config.rs  error.rs  main.rs
crates/opacore-server/src/auth/: middleware.rs  mod.rs  password.rs  session.rs  verification.rs
crates/opacore-server/src/db/: migrations.rs  mod.rs  schema.sql
crates/opacore-server/src/models/: mod.rs
crates/opacore-server/src/routes/: alerts.rs  analysis.rs  auth.rs  billing.rs  fees.rs  invoices.rs  labels.rs  mod.rs  portfolios.rs  prices.rs  sync.rs  tax.rs  transactions.rs  wallets.rs
crates/opacore-server/src/services/: alerts.rs  costbasis.rs  email.rs  fees.rs  invoice_checker.rs  mod.rs  prices.rs  sync.rs  tax.rs  wallet.rs
docker/: .env.production.example  Caddyfile  Dockerfile.server  Dockerfile.web  backup.sh  docker-compose.prod.yml  docker-compose.yml
(+28 files in other folders)
